# Rust-Vue-Skeleton

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  dev_db.sh  docker-compose.yml
.cargo/: config.toml
.sqlx/: query-0031f357457c6b0ccde8c97f91384637b1e7c624cce8db665ad1dd2464aa15f7.json  query-041491940fff2ef69083f4fcad265307dbac44bea6ee00e9d913b0d9f93b0785.json  query-0cf5984b72b82841f4b03c7f2159fadc7d3adeb125e715411de12e8a49afd0cb.json  query-0d4d698b039ac95743392f44379bd1b8881297a06d0e0d333b065aec5d9da24e.json  query-1d8247d284d3ecfe50552081548e6e7d9266965677723de07cd0a4339950cc21.json  query-2bc12d6472456f4ed4a98e92c90677632bc863c56dd0e7f0fa997ec5f8afdd62.json  query-3cdbedee673c684b3698ef0508be41e0f67f365c39a81b8e5aa6779e82d35b18.json  query-76343bc34efa8805a295d956105ebd14e7c8247aef95ff4f2c1a9e35e42d20e7.json  query-883c65629da93d619dbdba2da8e1f800cb74f588f67801d65a0636c20d72ca3e.json  query-925cf7f73e76c25595bd9bfc158088e1d365f5ba0bc278599b9615379d71310b.json  query-9ddb4724ceba76824bb43df6864ac7af6a38e80596b9951d3fd52327cba2902a.json  query-9fa261430b909cce7c8d9d996208b9831ad70fe7c7dad591e2d1aaefda332c40.json  query-acf928625be26ca98c76cd431d760164190a8c36d185d2d1cfe3b13297aa1974.json  query-b07990f619dfe814016261487ee34b19f56d51687c430f5ea32469f8a747ef44.json  query-b61377101cd65dbd8c97702fe3a76f791c43849b84d5e16e4e3d98cbde9f7a17.json  query-b7970af9c27c68832f2abe9e72d1750038fc3651be03d3e67bce874c301dcd0f.json  query-be3e3336329486bab6ffb813917d73b8e6aef525149944f55501e3ba230480c3.json  query-d3129787208279cbf1ecf20f6830e3073002c6454411ac26066d2fe5c2f7f62f.json  query-d89c348c31c506208713ca7781739e9577e4041d73d8fe096e663284ec0c3f13.json  query-e1f01dea11f13db91350161e11565abc7265ef52af27bb0731e00fabb83e6655.json  query-edcb1d8e096ca4e7fa84b546c244a0f19f6db3befb235a225531b62eb59ad68f.json  query-f4d90ef45b6ebf7b43bec7f1a05731b084965ac4f322db7f0c004762e08f4510.json  (+2 more)
(+56 files in other folders)
