[package]
name = "rust-vue-skeleton"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }