[package]
name = "rust-vue-skeleton"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"

[dependencies]
axum = "0.8"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "postgres", "uuid", "migrate", "time", "runtime-tokio"] }
time = "0.3.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
